<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"

    android:orientation="vertical"
    >

    <TextView android:id="@+id/asc_tv_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Select a Cab Type"
        android:textSize="14sp"
        android:textColor="@color/colorTextBlue"
        android:layout_margin="8dp"
        android:textAllCaps="true"
        android:paddingTop="16dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#9e9e9e"/>

    <TextView android:id="@+id/asc_tv_micro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/micro"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        android:textColor="@color/colorAsh"
        android:textSize="12sp"
        android:textStyle="bold"/>
    <TextView android:id="@+id/asc_tv_mini"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mini"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        android:textColor="@color/colorAsh"
        android:textSize="12sp"
        android:textStyle="bold"/>
    <TextView android:id="@+id/asc_tv_sedan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sedan"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        android:textColor="@color/colorAsh"
        android:textSize="12sp"
        android:textStyle="bold"/>
    <TextView android:id="@+id/asc_tv_luxury"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/luxury"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        android:textColor="@color/colorAsh"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <Button android:id="@+id/asc_bt_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:background="@drawable/rect_bg"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:padding="8dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:textAllCaps="true"
        android:paddingBottom="16dp"
        android:layout_marginBottom="16dp"/>


</LinearLayout>