<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rect_ash_stroke_bg">

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/validate_otp"
        android:background="@color/colorAsh"
        android:padding="14dp"
        android:gravity="left"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

    <EditText android:id="@+id/aao_et_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_ash_stroke_bg_single_line"
        android:hint="@string/xxx"
        android:textColorHint="@color/colorAshLight"
        android:textColor="@color/colorAsh"
        android:textSize="16sp"
        android:layout_margin="32dp"
        android:padding="16dp"/>

    <Button android:id="@+id/aao_bt_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:background="@drawable/rect_blue_stroke_bg_nc"
        android:textColor="@color/colorTextBlue"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center"/>

</LinearLayout>