<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rect_ash_stroke_bg">

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_category"
        android:background="#fff59d"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        android:textAllCaps="true"
        android:gravity="center"
        android:textStyle="bold"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="6dp"/>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mini"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:gravity="left"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Rs. 0"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:gravity="right"/>

        </LinearLayout>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e0e0e0"/>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sedan"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:gravity="left"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Rs. 0"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:gravity="right"/>

    </LinearLayout>

</LinearLayout>