<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout android:id="@+id/fp_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rect_ash_stroke_bg_single_line"
        android:padding="16dp">

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#8e8e8e"
        android:text="@string/username"
        android:layout_marginLeft="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <EditText android:id="@+id/fp_tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/colorBlack"
        android:text="Guest"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:background="@drawable/et_bg"/>

        <ImageButton android:id="@+id/fp_ib_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/m_edit"
            android:background="@color/colorWhite"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAshLight"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#8e8e8e"
        android:text="@string/password"
        android:layout_marginLeft="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText android:id="@+id/fp_tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorBlack"
            android:text="Guest"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:background="@drawable/et_bg"/>

        <ImageButton android:id="@+id/fp_ib_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/m_edit"
            android:background="@color/colorWhite"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAshLight"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#8e8e8e"
        android:text="@string/mobile_number"
        android:layout_marginLeft="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText android:id="@+id/fp_tv_mobile_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorBlack"
            android:text="9999999999"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@drawable/et_bg"/>

        <ImageButton android:id="@+id/fp_ib_mobile_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/m_edit"
            android:background="@color/colorWhite"/>

    </LinearLayout>

    </LinearLayout>

    <TextView android:id="@+id/fp_tv_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/save"
        android:textColor="@color/colorTextBlue"
        android:textSize="16sp"
        android:textAllCaps="true"
        android:gravity="right"/>

    <Button android:id="@+id/fp_bt_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/colorTextBlue"
        android:background="@drawable/rect_blue_stroke_bg_nc"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

</LinearLayout>